fix: on demand submission overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -539,8 +539,6 @@ $d-height: 500px;
   overflow: hidden;
   width: $d-width !important;
   height: $d-height !important;
-  min-width: $d-width !important;
-  min-height: $d-height !important;
   max-width: $d-width !important;
   max-height: $d-height !important;
 
